Fix leak caused by CSS2PropertiesTearoff by simplifying aggregation.  b=212269  r+sr=bzbarsky